2002-11-16  Martin Baulig  <martin@ximian.com>

	* decl.cs (MemberCache.AddMethods): Use BindingFlags.FlattenHierarchy
	when looking up static methods to make this work on Windows.
	Fixes #33773.

2002-11-16  Martin Baulig  <martin@ximian.com>

	* ecore.cs (PropertyExpr.VerifyAssignable): Check whether we have
	a setter rather than using PropertyInfo.CanWrite.

2002-11-15  Nick Drochak  <ndrochak@gol.com>

	* class.cs: Allow acces to block member by subclasses. Fixes build
	breaker.

2002-11-14  Martin Baulig  <martin@ximian.com>

	* class.cs (Constructor.Emit): Added the extern/block check.
	Fixes bug #33678.

2002-11-14  Martin Baulig  <martin@ximian.com>

	* expression.cs (IndexerAccess.DoResolve): Do a DeclaredOnly
	iteration while looking for indexers, this is needed because the
	indexer may have a different name in our base classes.  Fixed the
	error reporting (no indexers at all, not get accessor, no
	overloaded match).  Fixes bug #33089.
	(IndexerAccess.DoResolveLValue): Likewise.

2002-11-14  Martin Baulig  <martin@ximian.com>

	* class.cs (PropertyBase.CheckBase): Make this work for multiple
	indexers.  Fixes the first part of bug #33089.
	(MethodSignature.InheritableMemberSignatureCompare): Added support
	for properties.

2002-11-13  Ravi Pratap  <ravi@ximian.com>

	* attribute.cs (Attribute.Resolve): Catch the
	NullReferenceException and report it since it isn't supposed to
	happen. 
	
2002-11-12  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (Binary.EmitBranchable): Also handle the cases for
	LogicalOr and LogicalAnd that can benefit from recursively
	handling EmitBranchable.  The code now should be nice for Paolo.

2002-11-08  Miguel de Icaza  <miguel@ximian.com>

	* typemanager.cs (LookupType): Added a negative-hit hashtable for
	the Type lookups, as we perform quite a number of lookups on
	non-Types.  This can be removed once we can deterministically tell
	whether we have a type or a namespace in advance.
